--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0;URL='https://www.chromestatus.com/samples'">
+Google Samples
 </head>
 </html>
